Set up GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://OtoGaldava.github.io/Sofo-lawyer"
+  "homepage": "https://OtoGaldava.github.io/Sofo-lawyer",
   "name": "sofo-lawyer",
   "version": "0.1.0",
   "private": true,
