--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dev": "next dev",
   "eject": "next eject",
   "predeploy": "npm run build", 
-  "deploy": "gh-pages -d build",
+  "deploy": "gh-pages -d out",
   "lint": "next lint"
 },
   "dependencies": {
@@ -17,7 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "^15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+     "gh-pages": "^3.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
