--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "name": "sofo-lawyer",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "start": "next start",
-  "build": "next build",
-  "dev": "next dev",
-  "eject": "next eject",
-  "predeploy": "npm run build", 
-  "deploy": "gh-pages -d out",
-  "lint": "next lint"
-},
+  "scripts": {
+    "start": "next start",
+    "build": "next build",
+    "dev": "next dev",
+    "eject": "next eject",
+    "export": "next export", 
+    "predeploy": "npm run build && npm run export",
+    "deploy": "gh-pages -d out",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-     "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "gh-pages": "^6.3.0",
     "typescript": "^5"
   }
 }
