--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "name": "sofo-lawyer",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "next start",
-    "build": "next build",
-    "dev": "next dev",
-    "eject": "next eject",
-    "predeploy": "npm run build && npm run export", 
-    "deploy": "gh-pages -d out",
-    "lint": "next lint"
-  },
+"scripts": {
+  "start": "next start",
+  "build": "next build",
+  "dev": "next dev",
+  "eject": "next eject",
+  "predeploy": "npm run build", 
+  "deploy": "gh-pages -d .next",
+  "lint": "next lint"
+},
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
