--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
 "scripts": {
   "start": "next start",
-  "build": "next build",
+  "build": "next build && next export",
   "dev": "next dev",
   "eject": "next eject",
   "predeploy": "npm run build", 
