--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     ".next/types/**/*.ts",
     "next-env.d.ts",
     "dist/types/**/*.ts"
-, "next.config.ts"  ],
+, "next.config.ts", "next-sitemap.config.js"  ],
   "exclude": [
     "node_modules"
   ]
